<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Sharing</string>
    <string name="action_settings">Settings</string>
	<string name="banner_id">ca-app-pub-7335882925318194/3793313661</string>
	<string name="interstitial_id">ca-app-pub-7335882925318194/8223513261</string>
    <string name="btnLogin">Login</string>
    <string name="btnSignUp">Register with Email</string>
    <string name="btnFBLogin">Register with Facebbok</string>
    <string name="txtHintPass">Password</string>
    <string name="txtHintUser">Username</string>
    <string name="txtLableWelcome">Welcome</string>
    <string name="txtHintEmail">Email</string>
    <string name="txtLableForgetPassword">Forget Password?</string>
    <string name="btnlabelResetPass">Reset</string>
    <string name="btnLableCancle">Cancel</string>
    <string name="btnLableSubmit">Update</string>
    <string name="edtHintEmail">Email</string>
    <string name="rdMaleLabel">Male</string>
    <string name="rdFemaleLabel">Female</string>
    <string name="txtHintName">Name</string>
    <string name="txtHintPhone">Phone</string>
    <string name="txtcompanyName">MobileMerit.com</string>
    <!-- facebook item -->
        <string name="app_id">331356510369508</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="login_intro">Register Image Sharing App by logging in with the button below!</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="relationship">Relationship</string>
    
  <item type="id" name="tabcontent" />
  <item type="id" name="tabhost" />
    <string-array name="updateFrequencyEntry">
        <item name="5">5 min</item>
        <item name="8">8 min</item>
        <item name="10">10 min</item>
        <item name="15">15 min</item>
    </string-array>
    <string-array name="updateFrequencyValue">
        <item name="5">5</item>
        <item name="8">8</item>
        <item name="10">10</item>
        <item name="15">15</item>
    </string-array>

    <!-- String resource for the shared prefrence -->
    <string name="sendLocationFrequency">sendDataFrequency</string>
    <string name="isServiceRunning">isServiceRunning</string>

    <!-- Toast lebels -->
    <string name="ERROR_INTERNET">Check Your Internet Connection</string>

    <!-- Broadcast Action -->
    <string name="ACTION_SCHEDULE">com.aynsoft.service_broadcast</string>

    <!-- Error Strings -->
    <string name="ERROR_INVALID_EMAIL">Enter valid email</string>
    <string name="ERROR_INVALID_USERNAME">username must be greater than 6 latters</string>
    <string name="ERROR_INVALID_PASSWORD">password must be greater than 6 latters</string>
    <string name="ERROR_INVALID_PROFILENAME">Profile name must be greater than 6 latters</string>

    <!-- Dialog Strings -->
    <string name="FORGET_SUCCESS_TITLE">Info</string>
    <string name="FORGET_SUCCESS_MSG">An email with the password reset
	      link is being dropped in your mail box.\nPlesase check.</string>

    <!-- Parser User Table Content -->
    <string name="USER_NAME">name</string>
    <string name="USER_GENDER">gender</string>
    <string name="USER_PROFILE_PIC">profilepic</string>
    <string name="USER_USER">user</string>
    <string name="USER_PHONE">phone</string>

    <!-- ParseObject Class Content Text -->
    <string name="TABLE_USER_POST">UserPost</string>
    <string name="USER_POST_PIC">postpic</string>
    <string name="USER_POST_CAPTION">caption</string>

    <!-- Broadcast Receiver Actions -->
    <string name="ACTION_IMAGE_UPLOADED">org.aynsoft.logInParseEx.ImageUploadedReceiver</string>

    <!-- Intent Extra -->
    <string name="EXTRA_PARSE_FILE">parseFile</string>

</resources>