<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btnFacebbolkLoginForeground"
    android:orientation="vertical" >

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/banner_adview" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ProgressBar
                android:id="@+id/progressIndicator"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/LayoutFormHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBottomLogin"
                android:layout_marginLeft="@dimen/marginTopLogin"
                android:layout_marginRight="@dimen/marginTopLogin"
                android:layout_marginTop="@dimen/marginTopLogin"
                android:orientation="vertical"
                android:padding="@dimen/marginTenDP" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginTopLogin"
                    android:gravity="center" >

                    <TextView
                        android:id="@+id/textView1"
                        style="@android:style/TextAppearance.Large"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/txtLableWelcome"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edtUserName"
                    style="@style/edtTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layutMarginFirst"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_boder"
                    android:ems="10"
                    android:hint="@string/txtHintUser"
                    android:padding="@dimen/marginFiveDP" />

                <EditText
                    android:id="@+id/edtPassword"
                    style="@style/edtTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layutMarginFirst"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_boder"
                    android:ems="10"
                    android:hint="@string/txtHintPass"
                    android:inputType="textPassword"
                    android:padding="@dimen/marginFiveDP" >

                    <requestFocus />
                </EditText>

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/btnLoginStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layutMarginFirst"
                    android:text="@string/btnLogin" />

                <TextView
                    android:id="@+id/txtForgetPassword"
                    style="@android:style/TextAppearance.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layutMarginFirst"
                    android:gravity="right"
                    android:text="@string/txtLableForgetPassword"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>