<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/banner_adview" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/progressIndicator"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/LayoutFormHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginBottomLogin"
            android:layout_marginLeft="@dimen/marginTopLogin"
            android:layout_marginRight="@dimen/marginTopLogin"
            android:layout_marginTop="@dimen/marginTopLogin"
            android:orientation="vertical"
            android:padding="@dimen/marginTenDP" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginTopLogin"
                android:gravity="center" >

                <TextView
                    android:id="@+id/textView1"
                    style="@style/txtTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txtLableWelcome" />
            </LinearLayout>

            <EditText
                android:id="@+id/edtForgetEmail"
                style="@style/edtTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layutMarginFirst"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/edtHintEmail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginTopLogin"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnReset"
                    style="@style/btnLoginStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layutMarginFirst"
                    android:layout_weight="1"
                    android:text="@string/btnlabelResetPass" />

                <Button
                    android:id="@+id/btnCancel"
                    style="@style/btnLoginStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layutMarginFirst"
                    android:layout_weight="1"
                    android:text="@string/btnLableCancle" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>