<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LayoutFormHolder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/banner_adview" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/LayoutFormHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="@dimen/marginTenDP" >

            <EditText
                android:id="@+id/edtSignEmail"
                style="@style/edtTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layutMarginFirst"
                android:background="@drawable/edittext_boder"
                android:drawableLeft="@drawable/ic_drw_email"
                android:drawablePadding="@dimen/marginFiveDP"
                android:ems="10"
                android:hint="@string/txtHintEmail"
                android:inputType="textEmailAddress"
                android:padding="@dimen/marginFiveDP" />

            <EditText
                android:id="@+id/edtSignUserName"
                style="@style/edtTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layutMarginFirst"
                android:background="@drawable/edittext_boder"
                android:drawableLeft="@drawable/ic_drw_user"
                android:drawablePadding="@dimen/marginFiveDP"
                android:ems="10"
                android:hint="@string/txtHintUser"
                android:padding="@dimen/marginFiveDP" />

            <EditText
                android:id="@+id/edtSignPassword"
                style="@style/edtTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layutMarginFirst"
                android:background="@drawable/edittext_boder"
                android:drawableLeft="@drawable/ic_drw_pass"
                android:drawablePadding="@dimen/marginFiveDP"
                android:hint="@string/txtHintPass"
                android:inputType="textPassword"
                android:padding="@dimen/marginFiveDP" >
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTenDP"
                android:orientation="horizontal"
                android:padding="@dimen/marginFiveDP" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="PROFILE"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <!--
                     <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Optional"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
                -->
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#A5B0B6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/marginFiveDP" >

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/edtSignName"
                        style="@style/edtTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layutMarginFirst"
                        android:background="@drawable/edittext_boder"
                        android:drawableLeft="@drawable/ic_drw_name"
                        android:drawablePadding="@dimen/marginFiveDP"
                        android:hint="@string/txtHintName"
                        android:inputType="text"
                        android:padding="@dimen/marginFiveDP" >
                    </EditText>

                    <EditText
                        android:id="@+id/edtSignPhone"
                        style="@style/edtTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layutMarginFirst"
                        android:background="@drawable/edittext_boder"
                        android:drawableLeft="@drawable/ic_drw_phone"
                        android:drawablePadding="@dimen/marginFiveDP"
                        android:hint="@string/txtHintPhone"
                        android:inputType="phone"
                        android:padding="@dimen/marginFiveDP" >
                    </EditText>
                </LinearLayout>

                <ImageView
                    android:id="@+id/imgSignProfilePic"
                    android:layout_width="@dimen/widthBrowseUserPic"
                    android:layout_height="@dimen/widthBrowseUserPic"
                    android:src="@drawable/bg_btn_fb_login" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnSignUp"
                    style="@style/btnFacebookLoginStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layutMarginFirst"
                    android:layout_weight="1"
                    android:text="@string/btnSignUp" />

                <TextView
                    android:id="@+id/btnSignUpCancel"
                    style="@style/txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layutMarginFirst"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/btnLableCancle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>